# myclaw

./: .env.example  .gitignore  AGENTS.md  Architecture.md  Dockerfile  README.md  checklist.md  config.json.example  docker-compose.yml  pyproject.toml  skills-lock.json
.github/workflows/: docker-publish.yml
plugins/memsearch/hooks/: common.sh  session-end.sh
skills/: SKILL.md
src/examples/lark/: conn.py
src/examples/litellm/: gen_image.py  gen_video.py
src/examples/memsearch/: basic.py
src/myclaw/: main.py
src/myclaw/agent/: client_connect.py  config.py  core.py  skills.py  tools.py
src/myclaw/agent/hooks/: __init__.py  memsearch.py
src/myclaw/bus/: __init__.py  queue.py
src/myclaw/channels/: __init__.py  base.py  cli.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  qq.py  slack.py  telegram.py  whatsapp.py
src/myclaw/config/: __init__.py  loader.py  schema.py
src/myclaw/providers/: __init__.py  custom_provider.py  litellm_provider.py  openai_codex_provider.py  registry.py  transcription.py
src/myclaw/utils/: __init__.py  logging_bridge.py  paths.py
tests/: test_basic.py
