[project]
name = "myclaw"
version = "0.1.0"
description = "A personal AI assistant powered by Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml",
    "typer",
    "rich",
    "httpx",
    "lark-oapi>=1.0.0",
    "aiohttp>=3.9.0",
    "dotenv>=0.9.9",
    "litellm>=1.81.16",
    "json-repair>=0.58.1",
    "oauth-cli-kit>=0.1.3",
    "dingtalk-stream>=0.24.0,<1.0.0",
    "python-telegram-bot==22.6",
    "lark-oapi>=1.5.0,<2.0.0",
    "slack-sdk>=3.39.0,<4.0.0",
    "slackify-markdown>=0.2.0,<1.0.0",
    "qq-botpy>=1.2.0,<2.0.0",
    "loguru>=0.7.0",
    "nest-asyncio>=1.5.0",
    "memsearch>=0.1.13",
]

[project.scripts]
myclaw = "myclaw.main:app"

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myclaw"]

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 2

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "C4",     # flake8-comprehensions
    "FA",     # flake8-future-annotations
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PGH",    # grep-analog
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flylent
    "PERF",   # perflint
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913",# too-many-arguments (too strict)
    "PLR0912",# too-many-branches
    "PLR0915",# too-many-statements
    "PLR2004",# magic-value-comparison
    "C901",   # too-complex (let complexity tool handle)
    "PLC0415",# import within functions (allowed for lazy loading)
    "F401",   # imported but unused (caused by lazy loading pattern)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
ignore-names = ["test_.*", ".*_test"]

[tool.ruff.lint.isort]
known-first-party = ["myclaw"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pre-commit]
default_stages = ["commit"]

[tool.pre-commit.hooks]
ruff = { entry = "ruff check --fix", stages = ["commit"] }
ruff-format = { entry = "ruff format", stages = ["commit"] }
